# autocron

./: .gitignore  LICENSE  README.md  SKILL.md  install.sh  pyproject.toml
autocron/: __init__.py  convergence.py  copaw_skill.py  creator.py  git_manager.py  judge.py  knowledge.py  llm_backend.py  main.py  router.py
examples/: backup_task.md  board_meeting_task.md  clinic_schedule_task.md  disk_monitor_task.md  research_monitor_task.md
scripts/: autocron_run.sh
tests/: test_convergence.py  test_git_manager.py  test_judge.py  test_knowledge.py  test_router.py
